fix right column reading plan so fixed container doesn't jump on page refresh, fix title area for long plan titles

--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -93,8 +93,7 @@
       height: 30px
 
   a
-    height: 30px
-    line-height: 29px
+    line-height: 20px
 
 
 // Plan about page
